Fixed the overflow issue and added more prompts

--- a/public/gameStyle.css
+++ b/public/gameStyle.css
@@ -281,6 +281,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
 .vote-display-button {
     width: 175px;
@@ -306,6 +307,7 @@
     text-align: center;
     word-wrap: break-word;
     user-select: none;
+    word-break: break-all;
 }
 /*MAIN GAMEPLAY CONTAINER END*/
 
